--- a/.editorconfig
+++ b/.editorconfig
@@ -1,3 +1,7 @@
 [*.{kt,kts}]
+ij_kotlin_imports_layout = *
+ij_kotlin_line_break_after_multiline_when_entry = false
 ktlint_code_style = intellij_idea
+ktlint_function_naming_ignore_when_annotated_with = Composable
 ktlint_standard_class-signature = disabled
+ktlint_standard_mixed-condition-operators = disabled
